--- a/style.css
+++ b/style.css
@@ -699,7 +699,7 @@ textarea{
     background-color: white;
     transform: scaleX(0);
     transform-origin: left;
-    transition: transform 0.4s ease-in;
+    transition: transform 0.5s ease-in;
     z-index: -1;
  
 
@@ -713,6 +713,7 @@ textarea{
 }
 .submit:hover{
     color: black;
+    transform: scale(0.9);
 }
 
 
